@@ -1,3 +1,9 @@
+2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter/PersonCard.cs: Fixed up audio button
+	* Banter/PersonManager.cs: Removed status sort for now, race condition
+	  is messing it up
+
 2007-08-01  Brady Anderson <brady.anderson@gmail.com> 
 
 	* Banter/Conversation.cs: bug in requesting both audio and video stream
